language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_function_works_with_constants.snap
---
source: language-server/src/tests/action.rs
expression: "const wibble: fn(Int) -> String = wobble"
---
----- BEFORE ACTION
const wibble: fn(Int) -> String = wobble
                                  ↑     


----- AFTER ACTION
const wibble: fn(Int) -> String = wobble

fn wobble(int: Int) -> String {
  todo
}
