language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_function_works_with_constants_2.snap
---
source: language-server/src/tests/action.rs
expression: "\ntype Wibble(a) {\n    Wibble(fun: fn(Int) -> a)\n}\n\nconst wibble: Wibble(Int) = Wibble(missing)\n"
---
----- BEFORE ACTION

type Wibble(a) {
    Wibble(fun: fn(Int) -> a)
}

const wibble: Wibble(Int) = Wibble(missing)
                                   ↑       


----- AFTER ACTION

type Wibble(a) {
    Wibble(fun: fn(Int) -> a)
}

const wibble: Wibble(Int) = Wibble(missing)

fn missing(int: Int) -> Int {
  todo
}
