language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_function_works_with_invalid_call.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() -> Bool {\n  wibble(1, True, 2.3)\n}\n"
---
----- BEFORE ACTION

pub fn main() -> Bool {
  wibble(1, True, 2.3)
  ↑                   
}


----- AFTER ACTION

pub fn main() -> Bool {
  wibble(1, True, 2.3)
}

fn wibble(int: Int, bool: Bool, float: Float) -> Bool {
  todo
}
