language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_json_encoder_complex_types.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport gleam/option\nimport gleam/dict\n\npub type Something\n\npub type Wibble(value) {\n  Wibble(\n    maybe: option.Option(Int),\n    something: Something,\n    map: dict.Dict(String, List(Float)),\n    unknown: List(value),\n  )\n}\n"
---
----- BEFORE ACTION

import gleam/option
import gleam/dict

pub type Something

pub type Wibble(value) {
    ↑                   
  Wibble(
    maybe: option.Option(Int),
    something: Something,
    map: dict.Dict(String, List(Float)),
    unknown: List(value),
  )
}


----- AFTER ACTION

import gleam/json
import gleam/option
import gleam/dict

pub type Something

pub type Wibble(value) {
  Wibble(
    maybe: option.Option(Int),
    something: Something,
    map: dict.Dict(String, List(Float)),
    unknown: List(value),
  )
}

fn wibble_to_json(wibble: Wibble(value)) -> json.Json {
  let Wibble(maybe:, something:, map:, unknown:) = wibble
  json.object([
    #("maybe", case maybe {
      option.None -> json.null()
      option.Some(value) -> json.int(value)
    }),
    #("something", todo as "Encoder for Something"),
    #("map", json.dict(map, fn(string) { string }, json.array(_, json.float))),
    #("unknown", json.array(unknown, todo as "Encoder for value")),
  ])
}
