language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_json_encoder_for_type_with_multiple_variants_with_no_fields.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wibble {\n  Wibble\n  Wobble\n  Woo\n}\n"
---
----- BEFORE ACTION

pub type Wibble {
    ↑            
  Wibble
  Wobble
  Woo
}


----- AFTER ACTION
import gleam/json

pub type Wibble {
  Wibble
  Wobble
  Woo
}

fn wibble_to_json(wibble: Wibble) -> json.Json {
  case wibble {
    Wibble -> json.string("wibble")
    Wobble -> json.string("wobble")
    Woo -> json.string("woo")
  }
}
