language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_json_encoder_for_variant_with_no_fields.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wibble {\n  Wibble\n}\n"
---
----- BEFORE ACTION

pub type Wibble {
    ↑            
  Wibble
}


----- AFTER ACTION
import gleam/json

pub type Wibble {
  Wibble
}

fn wibble_to_json(wibble: Wibble) -> json.Json {
  json.string("wibble")
}
